--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Geometry-Primitive
 
+0.05
+  - Add MooseX::Clone for Point (for now)
+  - Add make_immutable to er'thang
+
 0.04
   - Add Circle
   - Move 'origin' attribute from Rectangle to Shape and make it !required
