--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Geometry-Primitive
 
+0.08
+  - Add Bézier curve
+  - POD fix (thanks Brian Cassidy)
+
 0.07
   - Add scale method to Shape role and implementations
   - Fix line slope calculation
